# c2pa4a

./: .gitignore  README.md  c2patool
.cargo/: config.toml
frontend/: README.md  package.json
node/: Cargo.toml  app.cert  app.key  certs.bash  out.pem  root.cert  root.key
node/c2pa-server/: pyproject.toml
node/src/: main.rs
react/: .env  package.json
react/src/: App.jsx  IPFS.js  MainPage.jsx  Photo.jsx  index.css  main.jsx
sol/: .package.json.swp  package.json
sol/artifacts/contracts/ZKMAV.sol/: ZKMAV.dbg.json  ZKMAV.json
sol/cache/: solidity-files-cache.json
sol/contracts/: .ZKMAV.sol.swp  ZKMAV.sol
sol/test/: .Lock.js.swp
test-zklocus/: package-lock.json  package.json
test-zklocus/pages/: index.js
test-zklocus/pages/api/: genLocusProof.js
zklocus-node-test/: index.js  package-lock.json  package.json
